[package]
name = "bumpalo-herd"
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
documentation = "https://docs.rs/bumpalo-herd"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/vorner/bumpalo-herd"
categories = ["memory-management", "rust-patterns"]
description = "Support for bumpalo in scoped threads & rayon"

[features]
allocator_api = ["bumpalo/allocator_api"]

[dependencies]
bumpalo = "~3"

[dev-dependencies]
bumpalo = { version = "~3", features = ["collections"] }
crossbeam-utils = "~0.7"
num_cpus = "~1"
rayon = "~1"
