[package]
name = "bumpalo-herd"
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
documentation = "https://docs.rs/bumpalo-herd"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vorner/bumpalo-herd"
categories = ["memory-management", "rust-patterns"]
description = "Support for bumpalo in scoped threads & rayon"

[dependencies]
bumpalo = "~3"

# This dependency provides a version of the unstable nightly Rust `Allocator`
# trait on stable Rust. Enabling this feature means that `bumpalo` will
# implement its `Allocator` trait.
allocator-api2 = { version = "0.2.8", default-features = false, optional = true }

[dev-dependencies]
bumpalo = "~3"
crossbeam-utils = "~0.8"
num_cpus = "~1"
rayon = "~1"

[features]
default = [
  "collections", # Exists for backward compatibility. Please remove this line at 0.2.0 release.
  "bumpalo/default"
]
collections = ["bumpalo/collections"]
boxed = ["bumpalo/boxed"]
allocator_api = ["bumpalo/allocator_api"]
allocator-api2 = ["bumpalo/allocator-api2", "dep:allocator-api2"]
serde = ["bumpalo/serde"]
std = ["bumpalo/std"]
