[package]
name = "bumpalo-herd"
version = "0.1.2"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
documentation = "https://docs.rs/bumpalo-herd"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vorner/bumpalo-herd"
categories = ["memory-management", "rust-patterns"]
description = "Support for bumpalo in scoped threads & rayon"

[dependencies]
bumpalo = "~3"

[dev-dependencies]
bumpalo = "~3"
crossbeam-utils = "~0.8"
num_cpus = "~1"
rayon = "~1"

[features]
default = [
  "bumpalo/collections", # Exists for backward compatibility. Please remove this line at 0.2.0 release.
]
